@@ -2,6 +2,7 @@
 @author Project manager <rdedianous@cls.fr>  
 @author Product owner <tjolibois@cls.fr>  
 @author Scrum master, software architect <smarty@cls.fr>  
+@author Quality assurance, continuous integration manager <bpirrotta@cls.fr> 
 
 >How to read this file? 
 Use a markdown reader: 
@@ -14,20 +15,42 @@ and also plugin for [notepadd++](https://github.com/Edditoria/markdown_npp_zenbu
 
 #Summary
 * [Overview](#Overview)
-* [Development environment](#DEV)
-* [Compilation](#COMPILATION)
-* [Packaging](#Packaging)
+* [Development](#Developement)
+  * [Development environment](#DEV)
+  * [Compilation](#COMPILATION)
+  * [Packaging](#Packaging)
 * [Installation](#Installation)
+  * [Prerequisites](#InstallPrerequisites)
+  * [Upgrade from Motu v2.x](#UpgradeFromMotu2x)
+  * [Install Motu from scratch](#InstallFromScratch)
+  * [Check installation](#InstallCheck)
+  * [CDO manual installation](#InstallCDO)
+  * [Installation folder structure](#InstallFolders)
+  * [Setup a front Apache HTTPd server](#InstallFrontal)
 * [Configuration](#Configuration)
-* [Start, Stop and Motu commands](#SS)
+  * [Configuration directory structure](#ConfigurationFolderStructure)
+  * [Business settings](#ConfigurationBusiness)
+  * [System settings](#ConfigurationSystem)
+  * [Log settings](#LogSettings)
+  * [Theme and Style](#ThemeStyle)
+* [Exploitation](#Exploitation)
+  * [Start, Stop and other Motu commands](#SS)
+  * [Logbooks](#Logbooks)
+  * [Add a dataset](#AdminDataSetAdd)
+  * [Debug view](#ExploitDebug)
+  * [Clean files](#ExploitCleanDisk)
 
+
+  
 #<a name="Overview">Overview</a>
 Motu project is a robust web server used to distribute data. [To be completed]
 
 
-#<a name="DEV">Development environment</a>
+#<a name="Developement">Developement</a>
 
-## Configure eclipse development environment
+##<a name="DEV">Development environment</a>
+
+### Configure Eclipse development environment
 * Add variable in order to run/debug Motu on your localhost:  
 From Eclipse menu bar: Run/Debug > String substitution  
 MOTU_HOME=J:\dev\cmems-cis-motu\motu-install-dir  
@@ -36,7 +59,7 @@ This variable represent the folder where Motu is installed.
 * From a file explorer, create folders:  
 $MOTU_HOME/log  
 $MOTU_HOME/config  
-$MOTU_HOME/data-deliveries  
+$MOTU_HOME/data/public/download  
 
 * Copy configuration files from Eclipse to configuration folder:  
 Note: If you do not have any motu-config folder available, default configuration files are folders are available in the "/motu-web/src/main/resources" folder  
@@ -62,7 +85,7 @@ just under the line:
 ```  
 Now Tomcat can serve downloaded files directly   
  
-## Run/Debug Motu
+### Run/Debug Motu
 
 Click Debug configurations...> Under Apache Tomcat, debug "Motu Tomcat v7.0 Server at localhost"
 
@@ -75,7 +98,7 @@ it displays "OK - response action=ping"
 For more details about Eclipse launchers, refers to /motu-parent/README-eclipseLaunchers.md.
 
 
-#<a name="COMPILATION">Compilation</a>
+##<a name="COMPILATION">Compilation</a>
 This step is used to generate Java ARchives (or war).
 ```
 cd /motu-parent  
@@ -86,7 +109,7 @@ All projects are built under target folder.
 The Motu war is built under "/motu-web/target/motu-web-X.Y.Z-classifier.war"  
 It embeds all necessary jar libraries.  
 
-#<a name="Packaging">Packaging</a>
+##<a name="Packaging">Packaging</a>
 This step includes the compilation step. Once all projects are compiled, it groups all archive in a same folder in order to easy the client delivery.  
 You have to set ANT script inputs parameter before running it. See /motu-distribution/build.xml header to get more details about inputs.
 ```
@@ -105,10 +128,89 @@ Three folders are built containing archives :
 
 
 #<a name="Installation">Installation</a>
-## Install Motu from archives files  
-### Install Motu on a <a name="IntallDU">Distribution Unit</a>  
 
-Copy the installation archives and unzip them.  
+
+
+## <a name="InstallPrerequisites">Prerequisites</a>
+
+In this chapter some path are set. For example "/opt/cmems-cis" is often written to talk about the installation path.
+You are free to install Motu in any other folder, so in the case, replace "/opt/cmems-cis" by your installation folder.
+
+### Motu host
+Motu OS target is Linux 64bits.
+
+### External interfaces
+Motu is able to communicate with different external servers:  
+
+* __Unidata | THREDDS Data Server (TDS)__: The links to this server are set in the [Business settings](#ConfigurationBusiness) and are used to run OpenDap or subsetter interfaces. If Motu runs only with DGF, this server is not required.
+* __Single Sign-On - CAS__: The link to this server is set in the [System settings](#ConfigurationSystem). If Motu does not use SSO, this server is not required.
+
+The installation of these two servers is not detailed in this document. Refer to their official web site to know how to install them.
+
+
+## <a name="UpgradeFromMotu2x">Upgrade from Motu v2.x</a>  
+
+Check this section only if you have installed Motu v2.x and you want to install Motu 3.x.
+In this section we consider that your Motu installation folder of version 2.x is "/opt/atoll/misgw/".  
+
+### Upgrade the software
+First stop your Motu v2.x: /opt/atoll/misgw/stop-motu.  
+Then install the version 3.x of [Motu from scratch](#InstallFromScratch). Before starting the new Motu version, upgrade its configuration by ready section below.  
+Once the version 3.x of Motu runs well, you can fully remove the folder of version 2.x is "/opt/atoll/misgw/".  
+To avoid any issue, perhaps backup the folder of Motu v2.x before removing it definitively.  
+``` 
+motu2xInstallFolder=/opt/atoll/misgw  
+rm -rf $motu2xInstallFolder/deliveries  
+rm -rf $motu2xInstallFolder/motu-configuration-common-2.1.16  
+rm -rf $motu2xInstallFolder/motu-configuration-sample-misgw-1.0.5  
+rm -rf $motu2xInstallFolder/motu-web  
+rm -rf $motu2xInstallFolder/start-motu  
+rm -rf $motu2xInstallFolder/stop-motu  
+rm -rf $motu2xInstallFolder/tomcat7-motu  
+rm -rf $motu2xInstallFolder/tomcat-motu-cas  
+```  
+
+
+
+### Upgrade the configuration
+
+#### Business configuration, Product & dataset: motuConfiguration.xml  
+The new version of Motu is compatible with the motuConfiguration.xml file configured in Motu v3.x.  
+So you can use exactly the same file. But it is important to update this file in order to:
+* use the new [ncss protocol](#BSmotuConfigNCSS) to improve performance of product download 
+* remove @deprecated attributes to ease future migrations. You can check them [Business configuration](#ConfigurationBusiness).
+* Check the attribute [extractionPath](#motuConfig-extractionPath) to continue to serve downloaded dataset from a fontral Apache HTTPd server.
+
+
+#### Log files
+In CMEMS-CIS context the log file motuQSlog.xml is stored in a specific place in order to be shared.  
+You have so to check that with the new version this log file is well written in the share folder.
+Here is where this log files were written in Motu v2.x:  
+``` 
+grep -i "motuQSlog.xml" /opt/atoll/misgw/motu-configuration-sample-misgw-1.0.5/resources/log4j.xml
+<param name="file" value="/opt/atoll/misgw/tomcat-motu-cas/logs/motuQSlog.xml" />
+```  
+The folder set in the value attribute shall be the same as the one defined in new the Motu configuration file. Replace $path below by the folder path:  
+``` 
+grep -i "motuQSlog.xml" /opt/cmems-cis/motu/config/log4j.xml
+fileName="$path/motuQSlog.xml"
+filePattern="$path/motuQSlog.xml.%d{MM-yyyy}"
+``` 
+
+
+
+
+
+
+  
+## <a name="InstallFromScratch">Install Motu from scratch</a>
+
+Motu installation needs two main step: the software installation and optionally the theme installation.  
+The software installation brings by default the CLS theme. The theme installation is there to customize or change this default theme.  
+
+### Install Motu software, for example on a <a name="IntallDU">Dissemination Unit</a>  
+
+Copy the installation archives and extract them.  
 ```
 cd /opt/cmems-cis  
 cp motu-products-A.B.tar.gz .  
@@ -119,33 +221,203 @@ tar xzf motu-distribution-X.Y.Z.tar.gz
 tar xzf motu-config-X.Y.Z-$BUILDID-$TARGET-$PLATFORM.tar.gz  
 cd motu
 ```
- 
- 
-If you do not use a central entity to serve public static files, you can eventually  extract the archive below 
-and serve it directly by configuring motu:  
+
+At this step, Motu is able to start. But static files used for customizing the web theme can be installed.  
+In the CMEMS context, the installation on a dissemination unit is ended, static files are installed on a [central server](#IntallPublicFilesOnCentralServer).  
+
+Motu is installed and configured. Refers to [configuration](#Configuration) in order to check configuration before [starting Motu](#SS).
+Then you can [check installation](#InstallCheck).
+
+
+### Install Motu theme (public static files)
+
+As a dissemination unit administrator, in CMEMS context, this section is not applicable.  
+
+Public static files are used to customized Motu theme. When several Motu are installed, a central server eases the installation and the update by 
+referencing static files only once on a unique machine. This is the case in the CMEMS contact, where each dissemination unit host a Motu server, and 
+a central server hosts static files.  
+If you runs only one install of Motu, you can install static files directly on Motu Apache tomcat server.
+
+#### <a name="IntallPublicFilesOnCentralServer">On a central server</a>  
+Extract this archive on a server.
 ```
 tar xvzf motu-web-static-files-X.Y.Z-classifier-$timestamp-$target.tar.gz  
 ```
-Then edit conf/server.xml:  
+Then use a server to make these extracted folders and files accessible from an HTTP address.
+ 
+Example: The archive contains a motu folder at its root. Then a particular file is "motu/css/motu/motu.css" and this file is served by the URL   http://resources.myocean.eu/motu/css/motu/motu.css in the CMEMS CIS context.   
+
+
+
+#### <a name="IntallPublicFilesOnMotuTomcat">Directly on Motu Apache tomcat server</a>  
+ 
+If you do not use a central entity to serve public static files, you can optionally extract the archive 
+and serve files directly by configuring Motu.  
+First extract the archive:   
 ```
+tar xzf motu-web-static-files-X.Y.Z-classifier-$timestamp-$target.tar.gz -C /opt/cmems-cis/motu/data/public/static-files   
+```
+
+Then edit "motu/tomcat-motu/conf/server.xml" in order to server files from Motu.  
+Add then "Context" node below. Note that severals "Context" nodes can be there.  
+```
+[...]  
 <Host appBase="webapps" [...]  
-        <!-- CLS#SMA: Used to serve public static files -->  
-        <Context docBase="${motu-config-dir}/../motu" path="/motu"/>  
+        <!-- Used to serve public static files -->  
+        <Context docBase="/opt/cmems-cis/motu/data/public/static-files/motu" path="/motu"/>  
  [...]  
 ```
+Finally in motuConfiguration.xml remove the attribute named: [httpBaseRef](#motuConfig-httpBaseRef). (Do not set it empty, remove it).
 
-Otherwise refers to [Install Motu web public static files on a central server](#IntallPublicFilesOnCentralServer)
+
+If you want to set another path instead of "/motu", you have to set also the business configuration parameter named [httpBaseRef](#motuConfig-httpBaseRef).  
+
  
-Platform is installed and configured. Refers to [Configuration](#Configuration) for check configuration before [starting Motu](#SS).
+## <a name="InstallCheck">Check installation</a>
 
+### Check messages on the server console
 
-__Installation folder structure__
+When you start Motu, the only message shall be:  
+```
+tomcat-motu - start
+```
+
+If any other messages appear, you have to treat them.
+
+As Motu relies on binary software like CDO, error could be raised meaning that CDO does not runs well.  
+```
+ERROR: cdo tool does not run well: $cdo --version  
+[...]
+```  
+
+In this case, you have to install CDO manually.  
+
+### Check Motu web site available
+
+Open a Web browser, and enter:
+http://$motuUrl/motu-web/Motu?action=ping  
+Response has to be:   
+```  
+OK - response action=ping
+```  
+
+### Check Motu logs
+Check that no error appears in Motu [errors](#LogbooksErrors) log files.
+
+## <a name="InstallCDO">CDO manual installation</a>
+This section has to be read only if Motu does not start successfully.  
+Select one option below to install "cdo". If you have no idea about cdo installation, choose the Default option.
+
+* [Default option: Install cdo](#InstallCDOHelp)
+* [cdo is already installed on this machine](#InstallCDOAlreadyInstalled)
+* [Try MOTU without cdo installation](#InstallCDONoInstall)
+* [How cdo is built?](#InstallCDOUnderstand)  
   
-Once archives have been extracted, a "motu" folder is created and contains several sub-folders and files:
+### <a name="InstallCDOHelp">Install cdo</a>
+"cdo" (Climate Data operators) are commands which has to be available in the PATH when Motu starts.   
+By default, Motu provides a built of CDO and add the "cdo" command to the PATH, but with some Linux distribution it is necessary to install it.  
+Motu provides some help in order to install CDO.  
+
+First check your GLibC version:  
+```
+ldd --version  
+ldd (GNU libc) 2.12  
+[...]  
+```  
+
+If your GlibC is not 2.14, you have to install GLIBC 2.14:  
+__INSTALL GLIBC 2.14__  
+```
+export MotuInstallDir=/opt/cmems-cis  
+cd $MotuInstallDir/motu/products/cdo-group  
+wget http://ftp.gnu.org/gnu/glibc/glibc-2.14.tar.gz  
+tar zxvf glibc-2.14.tar.gz  
+cd glibc-2.14  
+mkdir build  
+cd build  
+mkdir $MotuInstallDir/motu/products/cdo-group/glibc-2.14-home  
+../configure --prefix=$MotuInstallDir/motu/products/cdo-group/glibc-2.14-home  
+make -j4  
+make install  
+cd $MotuInstallDir/motu  
+```  
+
+
+__Now check if "cdo" runs well__:  
+```
+export MotuInstallDir=/opt/cmems-cis  
+$MotuInstallDir/motu/products/cdo-group/cdo.sh --version  
+Climate Data Operators version 1.7.1 (http://mpimet.mpg.de/cdo)  
+[...]  
+```  
+
+If error appear like ones below, it certainly means that GLIC is not in the LD_LIBRARY_PATH.
+```
+$MotuInstallDir/motu/products/cdo-group/cdo-1.7.1-home/bin/cdo: error while loading shared libraries: libhdf5.so.10: cannot open shared object file: No such file or directory
+```  
+or  
+```
+cdo: /lib64/libc.so.6: version `GLIBC_2.14' not found (required by cdo)
+cdo: /lib64/libc.so.6: version `GLIBC_2.14' not found (required by /opt/cmems-cis-validation/motu/products/cdo-group/hdf5-1.8.17-home/lib/libhdf5.so.10)
+```
+
+In this case, edit $MotuInstallDir/products/cdo-group/cdo.sh and add "$GLIBC-home/lib" to LD\_LIBRARY\_PATH.   
+
+Now check again if "cdo" runs well.
+
+If it runs well, you can now start Motu.  
+
+
+### <a name="InstallCDOAlreadyInstalled">cdo is already installed on this machine</a>
+If "cdo" is installed in another folder on the machine, you can add its path in "$MotuInstallDir/motu/motu" script:  
+
+```  
+__setPathWithCdoTools() {  
+  PATH=$MOTU_PRODUCTS_CDO_HOME_DIR/bin:$PATH  
+}  
+```  
+
+Optionnaly set LD_LIBRAY_PATH in $MotuInstallDir/products/cdo-group/setLDLIBRARYPATH.sh  
+
+
+
+### <a name="InstallCDONoInstall">Try MOTU without cdo installation</a>
+Note that without CDO, some functionalities on depth requests or on download product won't work successfully.
+If any case, you can disable the CDO check by commented the check call:  
+
+* Disable check:  
+```
+cd /opt/cmems-cis/motu/  
+sed -i 's/  __checkCDOToolAvailable/#  __checkCDOToolAvailable/g' motu
+```  
+* Enable check:  
+```
+cd /opt/cmems-cis/motu/  
+sed -i 's/#  __checkCDOToolAvailable/  __checkCDOToolAvailable/g' motu
+```  
+  
+  
+  
+  
+### <a name="InstallCDOUnderstand">How cdo is built?</a>
+CDO is automaticcly build from the script $MotuInstallDir/motu/products/cdo-group/install-cdo.sh
+Also in order to get full details about CDO installation, you can get details in /opt/cmems-cis/motu/products/README and
+search for 'Download CDO tools'.  
+
+
+
+## <a name="InstallFolders">Installation folder structure</a>
+  
+Once archives have been extracted, a "motu" folder is created and contains several sub-folders and files:  
+__motu/__  
 
 * __config:__ Folder which contains the motu configuration files. Refers to [Configuration](#Configuration) for more details.
 * __data:__ Folder used to managed Motu data.
-  * __download__:  Folder used to save the products downloaded. This folder is sometimes elsewhere, for example in Motu v2: /datalocal/atoll/mis-gateway/deliveries/.
+  * __public__: Folders which contain files exposed to public. It can be from a frontal Apache HTTPd Web server, from Motu Apache Tomcat or any other access.
+     * __download__: Folder used to save the products downloaded. This folder is sometimes elsewhere, for example in Motu v2: /datalocal/atoll/mis-gateway/deliveries/. A best practice is to create a symbolic link to a dedicated partition to avoid to freeze Motu when there is no space left.   
+     * __inventories__: [AD]  
+     * __transaction__: [AD]   
+     * __static-files__: Used to store public static files. This folder can be served by a frontal Apache HTTPd Web server or Motu Apache Tomcat. In the CMEMS-CIS context, it is not used as static files are deployed on a central web server.      
 * __log:__ Folder which contains all log files. Daily logging are suffixed by yyyy-MM-dd.
   * __errors.log:__ Motu application errors
   * __warnings.log:__ Motu application warnings
@@ -166,18 +438,9 @@ Once archives have been extracted, a "motu" folder is created and contains sever
 
 
 
-### Install Motu public static files from a <a name="IntallPublicFilesOnCentralServer">central server</a>  
-Extract this archive on a server.
-```
-tar xvzf motu-web-static-files-X.Y.Z-classifier-$timestamp-$target.tar.gz  
-```
-Then use a server to make these extracted folders and files accessible from an HTTP address.
- 
-Example: The archive contains a motu folder at its root. Then a particular file is "motu/css/motu/motu.css" and this file is served by the URL   http://resources.myocean.eu/motu/css/motu/motu.css in the CMEMS CIS context.   
 
 
-
-## Setup a front Apache HTTPd server  
+## <a name="InstallFrontal">Setup a front Apache HTTPd server</a>  
 See sample of the Apache HTTPd configuration in the folder: config/apache-httpd-conf-sample  
 The configuration is described for Apache2  
 
@@ -188,22 +451,35 @@ The configuration is described for Apache2
 
 #<a name="Configuration">Configuration</a>
 
-This chapter describes the Motu configuration settings.
+This chapter describes the Motu configuration settings.  
+All the configuration files are set in the $installDir/motu/config folder.  
 
-## Configuration directory structure
+* [Configuration directory structure](#ConfigurationFolderStructure)
+* [Business settings](#ConfigurationBusiness)
+* [System settings](#ConfigurationSystem)
+* [Log settings](#LogSettings)
+
+  
+##<a name="ConfigurationFolderStructure">Configuration directory structure</a>
 cd $installDir/motu/config
   
 * __config:__ Folder which contains the motu configuration files.
   * __motu.properties:__ JVM memory, network ports of JVM (JMX, Debug) and Tomcat (HTTP, HTTPS, AJP, SHUTDOWN). CAS SSO server settings.
-  * __motuConfiguration.xml:__ Motu settings (Service, Catalog via Threads, Proxy, Queues, ....)
+  * __motuConfiguration.xml:__ Motu settings (Service, Catalog via Thredds, Proxy, Queues, ....)
   * __log4j.xml:__ Log4j v2 configuration file
   * __standardNames.xml:__ Contains the standard names [TBD]
   * __version-configuration.txt:__ Contains the version of the current Motu configuration.
   
-## Settings details  
-### motuConfiguration.xml: Motu settings  
+##<a name="ConfigurationBusiness">Business settings</a>
+### motuConfiguration.xml: Motu business settings  
 
-#### Attributes defined in motuConfig node
+You can configure 3 main categories:  
+
+* [MotuConfig node : general settings](#BSmotuConfig)
+* [ConfigService node : catalog settings](#BSconfigService)
+* [QueueServerConfig node : request queue settings](#BSqueueServerConfig)
+
+####<a name="BSmotuConfig">Attributes defined in motuConfig node</a>
 
 ##### defaultService  
 A string representing the default action in the URL /Motu?action=$defaultService  
@@ -220,29 +496,46 @@ Number of data in Megabytes that can be written and download for a Netcdf file. 
 ##### maxSizePerFileTDS
 Number of data in Megabytes that can be written and download for a Netcdf file. Default is 1024Mb. 
 
-##### extractionPath
+##### <a name="motuConfig-extractionPath">extractionPath</a>
 The absolute path where files downloaded from TDS are stored.  
-For example: /opt/cmems-cis/motu/data/download
+For example: /opt/cmems-cis/motu/data/public/download
+It is recommended to set this folder on an hard drive with very good performances in write mode.
+It is recommended to have a dedicated partition disk to avoid freezing Motu if the hard drive is full.
+By default value is $MOTU_HOME/data/public/download, this folder can be a symbolic link to another folder.  
 
 ##### downloadHttpUrl
-Http URL corresponding to the attribute <extractionPath>. It is used to allow users to download product files.
-String with format ${var} will be substituted with Java property variables. @See System.getProperty(var)
+Http URL used to download files stored in the "extractionPath" described above. It is used to allow users to download the result data files.  
+This URL is concatenated to the result data file name found in the folder "extractionPath".  
+When a frontal HTTPd server is used, it is this URL that shall be configured to access to the folder "extractionPath".  
+String with format ${var} will be substituted with Java property variables. @See System.getProperty(var)  
 
 ##### <a name="motuConfig-httpBaseRef">httpBaseRef</a>
 Http URL used to serve files from to the path where archive __motu-web-static-files-X.Y.Z-classifier-buildId.tar.gz__ has been extracted.  
-For example: This value http://resources.myocean.eu server a folder which contains motu/css/motu/motu.css.  
-It so enable to server http://resources.myocean.eu/motu/css/motu/motu.css
+For example: 
+
+* Value http://resources.myocean.eu/motu serve a folder which contains ./css/motu/motu.css.  
+It so enable to server http://resources.myocean.eu/motu/css/motu/motu.css  
+* Value . is used to server statics files included by default in Motu application
+* Remove this value to serve a path accessible from $motuServer/motu
+
         
 ##### cleanExtractionFileInterval
-In minutes, the waiting period admitted to keep the file that results of an extraction data request.  
+In minutes, oldest result files from extraction request are deleted. This check is done each "runCleanInterval" minutes.    
 Default = 60min
 
 ##### cleanRequestInterval
-In minutes, the waiting period admitted to keep the status response of an extraction data request.  
+In minutes, oldest status than this time are removed from Motu. This check is done each "runCleanInterval" minutes.  
 Default = 60min
 
 ##### runCleanInterval
-In minutes, the waiting period admitted to clean request status in memory and extraction file.  
+In minutes, the waiting time between each clean process.   
+A clean process does:  
+
+* delete files inside java.io.tmpdir
+* delete all files found in extractionFolder bigger than extractionFileCacheSize is Mb
+* delete all files found in extractionFolder oldest than cleanExtractionFileInterval minutes
+* remove all status oldest than cleanRequestInterval minutes
+
 Default = 1min
 
 ##### extractionFilePatterns
@@ -260,6 +553,11 @@ A clean job runs each <runCleanInterval>. File with a size higher than this valu
 If value is zero: no delete.  
 Default value = 0.
 
+##### describeProductCacheRefreshInMilliSec
+Provide the delay between two refresh of the Describe product cache.
+This delay is provided in millisecond.
+The default value is 60000 meaning 1 minute.
+
 
 ##### runGCInterval
 @Deprecated from v3 This parameter is not used. 
@@ -271,12 +569,10 @@ Document root of the servlet server.
         
 ##### useAuthentication
 @Deprecated from v3 This parameter is not used. It is redundant with parameter config/motu.properties#cas-activated.
-* __useAuthentication__
 
 
 ##### defaultActionIsListServices
-@Deprecated from v3 This parameter is not used.
-* __defaultActionIsListServices__  
+@Deprecated from v3 This parameter is not used.  
 
 ##### Configure the Proxy settings  
 @Deprecated from v3 This parameter is not used.
@@ -289,7 +585,7 @@ Proxy settings are not used on Motu:
 * __proxyPwd__
 
 
-#### Attributes defined in configService node
+#### <a name="BSconfigService">Attributes defined in configService node</a>
 
 ##### name
 String to set the config service name
@@ -301,7 +597,7 @@ String which describes the group
 String which describes the service
 
 ##### profiles
-Optional string containing one value, several values separated by a comma.  
+Optional string containing one value, several values separated by a comma or empty (meaning everybody can access).  
 Used to manage access right from a SSO cas server.  
 In the frame of CMEMS, three profiles exist:  
 
@@ -309,7 +605,7 @@ In the frame of CMEMS, three profiles exist:
 * major: major accounts  
 * external: external users  
 
-Otherwise, it’s possible to configure as many profiles as needed.  
+Otherwise, it's possible to configure as many profiles as needed.  
 Profiles are configured in LDAP within the attribute "memberUid" of each user. This attribute is read by CAS and is sent to Motu 
 once a user is logged in, in order to check if it matches profiles configured in Motu to allow a user accessing the data.  
 In LDAP, "memberUid" attribute can be empty, contains one value or several values separated by a comma.  
@@ -336,27 +632,32 @@ Example: m_HR_OBS.xml
 ##### type
 Example: tds
 
-##### ncss
-Without this attribute, Motu connects to TDS with Opendap protocol. If this attribute is set to "enabled" connects to TDS with ncss protocol in order to improve performance.  
-We recommend to use "enabled".
-Values are: "enabled", "disable" or empty
+##### <a name="BSmotuConfigNCSS">ncss</a>
+Optional parameter used to enable or disable the use of NetCDF Subset Service (NCSS) in order to request the TDS server.
+Without this attribute or when empty, Motu connects to TDS with Opendap protocol. If this attribute is set to "enabled" Motu connects to TDS with NCSS protocol in order to improve performance.   
+We recommend to use "enabled".   
+Values are: "enabled", "disable" or empty.
 
 ##### urlSite
-TDS URL  
-For example: http://$ip:$port/thredds/
+* TDS URL  
+For example: http://$ip:$port/thredds/  
 
+* DGF URL  
+For example: file:///opt/publication/inventories
 
-#### Attributes defined in queueServerConfig
+####<a name="BSqueueServerConfig">Attributes defined in queueServerConfig node</a>
 
 ##### maxPoolAnonymous
 Maximum number of request that an anonymous user can send to Motu before throwing an error message.  
-Value of -1 means no check is done.  
-Default value is 10
+Value of -1 means no check is done so an unlimited number of user can request the server.  
+Default value is 10  
+In case where an SSO server is used for authentication, this parameter is not used. In this you you will be able to fix a limit by setting "maxPoolAuth" parameter value.  
 
 ##### maxPoolAuth
 Maximum number of request that an authenticated user can send to Motu before throwing an error message.  
-Value of -1 means no check is done.  
+Value of -1 means no check is done so an unlimited number of user can request the server.  
 Default value is 1
+In case where no SSO server is used for authentication, this parameter is not used. In this you you will be able to fix a limit by setting "maxPoolAnonymous" parameter value.  
 
 ##### defaultPriority
 @Deprecated from v3 This parameter is not used.
@@ -375,6 +676,7 @@ Description of the queue.
 ##### Child node: maxThreads
 Use to build a java.util.concurrent.ThreadPoolExecutor an to set "corePoolSize" and "maximumPoolSize" values.  
 Default value is 1  
+The total number of threads should not be up to the total number of core of the processor on which Motu is running.  
 
 ##### Child node: maxPoolSize
 Request are put in a queue before being executed by the ThreadPoolExecutor. Before being put in the queue, the queue size
@@ -386,40 +688,162 @@ Default value is -1
 ##### Child node: dataThreshold
 Size in Mbytes. A request has a size. The queue in which this request will be processed is defined by the request size.
 All queues are sorted by size ascending. A request is put in the last queue which has a size lower than the request size.
-If the request size if higher than the bigger queue dataThreshold, request is not treated and an error message is returned.
+If the request size if higher than the bigger queue dataThreshold, request is not treated and an error message is returned.  
+This parameter is really useful when a Motu is used to server several kind of file size and you want to be sure that file with a specific size does no slow down request of small data size.  
+In this case you can configure two queues and set a number of threads for each in order to match the number of processors. The JVM, even if requests for high volume are running, will be able to
+process smallest requests by running the thread on the other processor core. Sp processing high volume requests will not block the smallest requests.  
 
 
 ##### Child node: lowPriorityWaiting
 @Deprecated from v3 This parameter is not used.
 
+##<a name="ConfigurationSystem">System settings</a>
+
+### motu.properties: Motu system settings  
+
+#### Java options
+The three parameters below are used to tune the Java Virtual Machine:  
+   # -server: tells the Hostspot compiler to run the JVM in "server" mode (for performance)  
+tomcat-motu-jvm-javaOpts=-server -Xmx4096M -Xms512M -XX:PermSize=128M -XX:MaxPermSize=512M  
+tomcat-motu-jvm-port-jmx=9010  
+tomcat-motu-jvm-address-debug=9090  
 
 
-#<a name="SS">Start, Stop and Motu commands</a>  
+#### Tomcat network ports
+The parameters below are used to set the different network ports used by Apache Tomcat.  
+At startup, these ports are set in the file "$installdir/motu/tomcat-motu/conf/server.xml".  
+But if this file already exist, it won't be replaced. So in order to apply these parameters, remove the file "$installdir/motu/tomcat-motu/conf/server.xml".
+tomcat-motu-port-http=9080  
+  # HTTPs is in a common way managed from a frontal Apache HTTPd server. If you really need to use it from Tomcat, you have to tune the SSL certificates and the protocols directly in the file "$installdir/motu/tomcat-motu/conf/server.xml".
+tomcat-motu-port-https=9443  
+tomcat-motu-port-ajp=9009  
+tomcat-motu-port-shutdown=9005  
+
+
+
+#### CAS SSO server
+
+   # true or false to enable the SSO connection to a CAS server
+cas-activated=false
+  
+   # Cas server configuration to allow Motu to access to it  
+   # @see https://wiki.jasig.org/display/casc/configuring+the+jasig+cas+client+for+java+in+the+web.xml  
+     
+   # The Cas server URL
+cas-server-url=https://cas-cis.cls.fr/cas  
+   # The Motu HTTP server url: example: http://misgw-ddo-qt.cls.fr:9080 or http://motu.cls.fr   
+cas-auth-serverName=http://$motuServerIp:$motuServerPort 
+   # The proxy callback HTTP URL on the Motu server (this URL can be defined on the frontal Apache HTTPs server)
+cas-validationFilter-proxyCallbackUrl=http://$motuServerIp:$motuServerPort/motu-web/proxyCallback
+
+#### Supervision
+To enable the status supervision, set the parameter below:
+tomcat-motu-urlrewrite-statusEnabledOnHosts=localhost,*.cls.fr
+
+This parameter is used to set the property below in the WEB.XML file:
+        <init-param>
+            <param-name>statusEnabledOnHosts</param-name>
+            <param-value>${tomcat-motu-urlrewrite-statusEnabledOnHosts}</param-value>
+        </init-param>
+        
+For more detail read:
+org.tuckey UrlRewriteFilter FILTERS : see http://urlrewritefilter.googlecode.com/svn/trunk/src/doc/manual/3.1/index.html  
+
+  
+## <a name="LogSettings">Log settings</a>
+
+Log are configured by using log4j2 in file config/log4j2.xml  
+
+### Motu queue server logs: motuQSlog.xml, motuQSlog.csv
+
+This log files are used to compute statistics about Motu server usage.  
+Two format are managed by this log, either XML or CSV.  
+To configure it, edit config/log4j.xml  
+
+##### Log format: XML or CSV  
+Update the fileFormat attribute of the node "MotuCustomLayout": <MotuCustomLayout fileFormat="xml">
+A string either "xml" or "csv" to select the format in which log message are written.  
+If this attribute is not set, the default format is "xml".  
+``` 
+		<RollingFile name="log-file-infos.queue"   
+		    fileName="${sys:motu-log-dir}/motuQSlog.xml"   
+			filePattern="${sys:motu-log-dir}/motuQSlog.xml.%d{MM-yyyy}"    
+			append="true">   
+			<!-- fileFormat=xml or csv -->  
+			<MotuCustomLayout fileFormat="xml" />  
+			<Policies>  
+				<TimeBasedTriggeringPolicy interval="1" modulate="true"/>  
+			</Policies>  
+		</RollingFile>  
+``` 
+
+##### Log path
+In the dissemination unit, Motu share its log files with a central server.  
+Log files have to be save on a public access folder.  
+Set the absolute path in the "fileName" and "filePattern" attributes. This path shall be serve by the frontal Apache HTTPd or Apache Tomcat.
+
+
+
+
+
+##<a name="ThemeStyle">Theme and Style</a>
+In Motu you can update the theme of the website. There is 2 mains things in order to understand how it works?  
+
+* [Template] velocity: The velocity templates are used to generated HTML pages from Java objects.  
+* [Style] CSS, Images and JS: These files are used to control style and behaviour of the web UI.
+
+By default, the template and style are integrated in the "war". But the Motu design enable to customize it easily.
+
+* [Template] velocity: You can change all templates defined in:
+motu/tomcat-motu/webapps/motu-web/WEB-INF/lib/motu-web-2.6.00-SNAPSHOT.jar/velocityTemplates/*.vm
+by defining them in motu/config/velocityTemplates.
+
+The main HTML web page structure is defined by the index.vm velocity template. For example, in you create a file motu/config/velocityTemplates/index.vm containing an empty html page, website will render empty web pages.  
+"index.vm" is the default theme. The name can be updated for each motuConfig#configService by setting veloTemplatePrefix="".
+By default veloTemplatePrefix="index".
+
+
+* [Style] CSS, Images and JS: Those files are integrated with the default theme motu-web-2.6.00-SNAPSHOT.war/css/*, motu-web-2.6.00-SNAPSHOT.war/js/*. These files can be downloaded from an external server which enable to benefit to several mMotu server at he same time. The external server name can be updated for each motuConfig#configService by setting httpBaseRef="".  
+By default httpBaseRef search static files from the Motu web server, for example:  
+``` 
+service.getHttpBaseRef()/css/motu/screen/images/favicon.ico"
+``` 
+
+
+
+
+
+#<a name="Exploitation">Exploitation</a>  
+
+##<a name="SS">Start, Stop and other Motu commands</a>  
 All operations are done from the Motu installation folder.  
 For example:  
 ``` 
 cd /opt/cmems-cis/motu 
 ```
 
-## Start Motu
+### Start Motu
 Start the Motu process.  
 ``` 
 ./motu start  
 ```
 
-## Stop Motu
+### Stop Motu  
+At the shutdown of Motu, the server waits that none of the pending or in progress request are in execution.  
+If it's the case, the server waits the end of the request before shutdown.  
+Note that after waiting 10 minutes server will automatically shutdown without waiting any running requests.  
 ``` 
 ./motu stop
 ``` 
 
 
-## Advanced commands
-### Restart Motu
+### Advanced commands
+#### Restart Motu
 ``` 
 ./motu restart
 ``` 
 
-### Status of the Motu process
+#### Status of the Motu process
 ``` 
 ./motu status
 ``` 
@@ -429,9 +853,119 @@ Status are the following:
 * __tomcat-motu started__ A pid file exists
 * __tomcat-motu stopped__ No pid file exists
 
-### Help about Motu parameters
+#### Help about Motu parameters
 ``` 
 ./motu ?
 ``` 
 
+##<a name="Logbooks">Logbooks</a>  
 
+Log messages are generated by Apache Log4j 2. The configuration file is "config/log4j.xml".  
+By default, log files are created in the folder $MOTU_HOME/log. This folder contains:  
+
+* __Motu log messages__
+  * __logbook.log__: All Motu log messages including WARN and ERROR(without stacktrace) messages.
+  * __warnings.log__: Only Motu log messages with a WARN level
+  * <a name="LogbooksErrors">__errors.log__</a>: Only Motu log messages with an ERROR level. When this file is not empty, it means that at least an error has been generated by the Motu application.
+  * __motuQSlog.xml__, __motuQSlog.csv__: Either a "CSV" or "XML" format which logs all queue events.
+     * CSV: On one unique line, writes:  
+    [OK | ERR;ErrCode;ErrMsg;ErrDate];  
+    queueId;queueDesc;
+    requestId;  
+    elapsedWaitQueueTime;elapsedRunTime;elapsedTotalTime;totalIOTime;preparingTime;readingTime;  
+    inQueueTime;startTime;endTime;  
+    amountDataSize;  
+    downloadUrlPath;extractLocationData;  
+    serviceName;TemporalCoverageInDays;ProductId;UserId;UserHost;isAnonymousUser;  
+    variable1;variable2;...;variableN;  
+    temporalMin,temporalMax;  
+    LatitudeMin;LongitudeMin;LatitudeMax;LongitudeMax:
+    DepthMin;DepthMax;
+     * XML: XStream is used to serialized a Java Object to XML from fr.cls.atoll.motu.web.bll.request.queueserver.queue.log.QueueLogInfo  
+     Same data are represented.
+     * Field details
+         * queueId, queueDesc: Queue used to process the request. Id and description found in config/motuConfiguration.xml
+         * requestId: A timestamp representing the request id.
+         * inQueueTime: Timestamp with format "yyyy-mm-dd' 'hh:mm:ss.SSS" when the request has been put in the queue
+         * startTime: Timestamp with format "yyyy-mm-dd' 'hh:mm:ss.SSS" when the request has been started to be processed
+         * endTime: Timestamp with format "yyyy-mm-dd' 'hh:mm:ss.SSS" when the request has been ended to be processed
+         * elapsedWaitQueueTime: Duration in milliseconds, [startTime - inQueueTime]
+         * elapsedRunTime: Duration in milliseconds, [endTime - startTime]
+         * elapsedTotalTime: Duration in milliseconds, [endTime - inQueueTime]
+         * totalIOTime: Duration in nanoseconds: reading + writing + copying + compressing times.
+         * readingTime: Duration in nanoseconds.
+         * writingTime: Duration in nanoseconds.
+         * preparingTime: Duration in nanoseconds, same value as reading time.
+         * copyingTime: Duration in nanoseconds, only set in DGF mode.
+         * compressingTime: Duration in nanoseconds, only set in DGF mode.
+         * amountDataSize: Size in MegaBytes
+         * downloadUrlPath: URL to download the product
+         * extractLocationData: Absolute path on the server
+         * serviceName: The service name found in the configuration file motuConfiguration.xml
+         * TemporalCoverageInDays: duration in days
+         * ProductId: Product id
+         * UserId: User login if user is not anonymous, otherwise its host or IP address from which he is connected
+         * UserHost: Host or ip address from which user is connected
+         * isAnonymousUser: true or false                
+         * variable1;variable2;...;variableN; Extracted variable names
+         * temporalMin,temporalMax: Temporal coverage
+         * LatitudeMin;LongitudeMin;LatitudeMax;LongitudeMax: Geographical coverage (latitude:-90;+90; longitude:180;+180)
+         * DepthMin;DepthMax;: Depth coverage   
+  * __velocity.log__: Logs generated by the http://velocity.apache.org/ technology to render HTML web pages.
+
+* __Tomcat log messages__
+  * __tomcat-motu-catalina.out__: Catalina output matching the environment variable CATALINA_OUT.
+  * __tomcat-motu.log__: $CATALINA_HOME/bin/startup.sh and $CATALINA_HOME/bin/shutdown.sh outputs are redirected to this file.  
+
+##<a name="AdminDataSetAdd">Add a dataset</a>  
+In order to add a new Dataset you have to add a new confiogService node in the Motu business configuration.  
+Example of a datasets served using:  
+
+* __TDS NCSS protocol__:  
+``` 
+<configService description="Free text to describe your dataSet" group="HR-Sample" httpBaseRef="" name="HR_MOD-TDS" veloTemplatePrefix="" profiles="external">  
+        <catalog name="m_HR_MOD.xml" type="tds" ncss="enabled" urlSite="http://$tdsUrl/thredds/"/>  
+</configService>  
+```  
+  
+* __TDS Opendap protocol__:  
+``` 
+<configService description="Free text to describe your dataSet" group="HR-Sample" httpBaseRef="" name="HR_MOD-TDS" veloTemplatePrefix="" profiles="external">  
+        <catalog name="m_HR_MOD.xml" type="tds" ncss="" urlSite="http://$tdsUrl/thredds/"/>  
+</configService>  
+```  
+
+* __DGF protocol__:  
+``` 
+<configService description="Free text to describe your dataSet" group="HR-Sample" profiles="internal, external, major" httpBaseRef="" name="HR_MOD-TDS" veloTemplatePrefix="">  
+           <catalog name="catalogFILE_GLOBAL_ANALYSIS_PHYS_001_016.xml" type="file" urlSite="file:///opt/atoll/hoa-armor/publication/inventories"/>  
+</configService>  
+```
+
+
+
+##<a name="ExploitDebug">Debug view</a>  
+From a web browser access to the Motu web site with the URL:  
+``` 
+/Motu?action=debug  
+``` 
+
+You can see the different requests and their status.  
+You change the status order by entering 4 parameters in the URL:  
+``` 
+/Motu?action=debug&order=DONE,ERROR,PENDING,INPROGRESS
+``` 
+
+##<a name="ExploitCleanDisk">Clean files</a>  
+
+##<a name="ExploitCleanDiskLogbook">Logbook files</a>  
+Logbook files are written in the folder configured in the log4j.xml configuration file.  
+All logs are generated daily except for motuQSLog (xml or csv) which are generated monthly.
+You can clean those files to avoid to fullfill the harddrive. 
+crontab -e
+0 * * * * find /opt/cmems-cis/motu/log/*.log* -type f -mmin +14400 -delete >/dev/null 2>&1  
+0 * * * * find /opt/cmems-cis/motu/log/*.out* -type f -mmin +14400 -delete >/dev/null 2>&1  
+0 * * * * find /opt/cmems-cis/motu/log/*.xml* -type f -mmin +144000 -delete >/dev/null 2>&1  
+0 * * * * find /opt/cmems-cis/motu/log/*.csv* -type f -mmin +144000 -delete >/dev/null 2>&1  
+  
+  
